--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <div id="background"></div>
     <div id="frame">
         <h1>Verse of the Day</h1>
-        <h2>2 Peter 5-7</h2>
-        <p>For this very reason, make every effort to add to your faith goodness; and to goodness, knowledge; </p>
-        <p>and to knowledge, self-control; and to self-control, perseverance; </p>
-        <p>and to perseverance, godliness; and to godliness, mutual affection; and to mutual affection, love.</p>
+        <h2>Galatians 1:6-8</h2>
+        <p>6 I am astonished that you are so quickly deserting the one who called you to live in the grace of Christ and are turning to a different gospel— </p>
+        <p>7 which is really no gospel at all. Evidently some people are throwing you into confusion and are trying to pervert the gospel of Christ. </p>
+        <p>8 But even if we or an angel from heaven should preach a gospel other than the one we preached to you, let them be under God’s curse!</p>
     </div>
 
     <script>
