--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
     <div id="background"></div>
     <div id="frame">
         <h1>Verse of the Day</h1>
-        <h2>Galatians 1:6-8</h2>
-        <p>6 I am astonished that you are so quickly deserting the one who called you to live in the grace of Christ and are turning to a different gospel— </p>
-        <p>7 which is really no gospel at all. Evidently some people are throwing you into confusion and are trying to pervert the gospel of Christ. </p>
-        <p>8 But even if we or an angel from heaven should preach a gospel other than the one we preached to you, let them be under God’s curse!</p>
+        <h2>Romans 2:1</h2>
+        <p>1 You, therefore, have no excuse, you who pass judgment on someone else, for at whatever point you judge another, you are condemning yourself, </p>
+        <p>because you who pass judgment do the same things.</p>
     </div>
 
     <script>
