--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@
     <div id="background"></div>
     <div id="frame">
         <h1>Verse of the Day</h1>
-        <h2>Romans 2:1</h2>
-        <p>1 You, therefore, have no excuse, you who pass judgment on someone else, for at whatever point you judge another, you are condemning yourself, </p>
-        <p>because you who pass judgment do the same things.</p>
+        <h2>Phillipians 1:3-6</h2>
+        <p>3 I thank my God every time I remember you. 4 In all my prayers for all of you, I always pray with joy</p>
+        <p>5 because of your partnership in the gospel from the first day until now, </p>
+        <p>6 being confident of this, that he who began a good work in you will carry it on to completion until the day of Christ Jesus.</p>
     </div>
 
     <script>
