--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <div id="background"></div>
     <div id="frame">
         <h1>Verse of the Day</h1>
-        <h2>Phillipians 1:3-6</h2>
-        <p>3 I thank my God every time I remember you. 4 In all my prayers for all of you, I always pray with joy</p>
-        <p>5 because of your partnership in the gospel from the first day until now, </p>
-        <p>6 being confident of this, that he who began a good work in you will carry it on to completion until the day of Christ Jesus.</p>
+        <h2>Mathew 7:21-23</h2>
+        <p>21 “Not everyone who says to me, ‘Lord, Lord,’ will enter the kingdom of heaven, but only the one who does the will of my Father who is in heaven.</p>
+        <p>22 Many will say to me on that day, ‘Lord, Lord, did we not prophesy in your name and in your name drive out demons and in your name perform many miracles?’</p>
+        <p>23 Then I will tell them plainly, ‘I never knew you. Away from me, you evildoers!’</p>
     </div>
 
     <script>
