--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <div id="background"></div>
     <div id="frame">
         <h1>Verse of the Day</h1>
-        <h2>Mathew 7:21-23</h2>
-        <p>21 “Not everyone who says to me, ‘Lord, Lord,’ will enter the kingdom of heaven, but only the one who does the will of my Father who is in heaven.</p>
-        <p>22 Many will say to me on that day, ‘Lord, Lord, did we not prophesy in your name and in your name drive out demons and in your name perform many miracles?’</p>
-        <p>23 Then I will tell them plainly, ‘I never knew you. Away from me, you evildoers!’</p>
+        <h2>2 Corinthians 12:11-13</h2>
+        <p>11 I have made a fool of myself, but you drove me to it. I ought to have been commended by you, for I am not in the least inferior to the “super-apostles,” even though I am nothing.</p>
+        <p>12 I persevered in demonstrating among you the marks of a true apostle, including signs, wonders and miracles. </p>
+        <p>13 How were you inferior to the other churches, except that I was never a burden to you? Forgive me this wrong!</p>
     </div>
 
     <script>
