--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
     <div id="background"></div>
     <div id="frame">
         <h1>Verse of the Day</h1>
-        <h2>2 Corinthians 12:11-13</h2>
-        <p>11 I have made a fool of myself, but you drove me to it. I ought to have been commended by you, for I am not in the least inferior to the “super-apostles,” even though I am nothing.</p>
-        <p>12 I persevered in demonstrating among you the marks of a true apostle, including signs, wonders and miracles. </p>
-        <p>13 How were you inferior to the other churches, except that I was never a burden to you? Forgive me this wrong!</p>
+        <h2>John 6:11-13</h2>
+        <p>11 Jesus then took the loaves, gave thanks, and distributed to those who were seated as much as they wanted. He did the same with the fish. </p>
+        <p>12 When they had all had enough to eat, he said to his disciples, “Gather the pieces that are left over. Let nothing be wasted.” </p>
+        <p>13 So they gathered them and filled twelve baskets with the pieces of the five barley loaves left over by those who had eaten.</p>
     </div>
 
     <script>
