--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
     <div id="background"></div>
     <div id="frame">
         <h1>Verse of the Day</h1>
-        <h2>John 6:11-13</h2>
-        <p>11 Jesus then took the loaves, gave thanks, and distributed to those who were seated as much as they wanted. He did the same with the fish. </p>
-        <p>12 When they had all had enough to eat, he said to his disciples, “Gather the pieces that are left over. Let nothing be wasted.” </p>
-        <p>13 So they gathered them and filled twelve baskets with the pieces of the five barley loaves left over by those who had eaten.</p>
+        <h2>1 Peter 11-12</h2>
+        <p>11 Dear friends, I urge you, as foreigners and exiles, to abstain from sinful desires, which wage war against your soul.</p>
+        <p>12 Live such good lives among the pagans that, though they accuse you of doing wrong, they may see your good deeds and glorify God on the day he visits us.</p>
     </div>
 
     <script>
