--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
     <div id="background"></div>
     <div id="frame">
         <h1>Verse of the Day</h1>
-        <h2>1 Peter 11-12</h2>
-        <p>11 Dear friends, I urge you, as foreigners and exiles, to abstain from sinful desires, which wage war against your soul.</p>
-        <p>12 Live such good lives among the pagans that, though they accuse you of doing wrong, they may see your good deeds and glorify God on the day he visits us.</p>
+        <h2>Revelation 21:6-8</h2>
+        <p>6 He said to me: “It is done. I am the Alpha and the Omega, the Beginning and the End. To the thirsty I will give water without cost from the spring of the water of life. </p>
+        <p>7 Those who are victorious will inherit all this, and I will be their God and they will be my children.</p>
+        <p>8 But the cowardly, the unbelieving, the vile, the murderers, the sexually immoral, those who practice magic arts, the idolaters and all liars—</p>
+        <p>they will be consigned to the fiery lake of burning sulfur. This is the second death.”</p>
     </div>
 
     <script>
