--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
     <div id="background"></div>
     <div id="frame">
         <h1>Verse of the Day</h1>
-        <h2>Revelation 21:6-8</h2>
-        <p>6 He said to me: “It is done. I am the Alpha and the Omega, the Beginning and the End. To the thirsty I will give water without cost from the spring of the water of life. </p>
-        <p>7 Those who are victorious will inherit all this, and I will be their God and they will be my children.</p>
-        <p>8 But the cowardly, the unbelieving, the vile, the murderers, the sexually immoral, those who practice magic arts, the idolaters and all liars—</p>
-        <p>they will be consigned to the fiery lake of burning sulfur. This is the second death.”</p>
+        <h2>Mark 8:22-25</h2>
+        <p>22 They came to Bethsaida, and some people brought a blind man and begged Jesus to touch him. </p>
+        <p>23 He took the blind man by the hand and led him outside the village. When he had spit on the man’s eyes and put his hands on him, Jesus asked, “Do you see anything?”</p>
+        <p>24 He looked up and said, “I see people; they look like trees walking around.”</p>
+        <p>25 Once more Jesus put his hands on the man’s eyes. Then his eyes were opened, his sight was restored, and he saw everything clearly. </p>
     </div>
 
     <script>
