--- a/index.html
+++ b/index.html
@@ -53,11 +53,10 @@
     <div id="background"></div>
     <div id="frame">
         <h1>Verse of the Day</h1>
-        <h2>Mark 8:22-25</h2>
-        <p>22 They came to Bethsaida, and some people brought a blind man and begged Jesus to touch him. </p>
-        <p>23 He took the blind man by the hand and led him outside the village. When he had spit on the man’s eyes and put his hands on him, Jesus asked, “Do you see anything?”</p>
-        <p>24 He looked up and said, “I see people; they look like trees walking around.”</p>
-        <p>25 Once more Jesus put his hands on the man’s eyes. Then his eyes were opened, his sight was restored, and he saw everything clearly. </p>
+        <h2>Luke 2:13-14</h2>
+        <p>13 Suddenly a great company of the heavenly host appeared with the angel, praising God and saying,</p>
+        <p>14 “Glory to God in the highest heaven,
+            and on earth peace to those on whom his favor rests.”</p>
     </div>
 
     <script>
