--- a/index.html
+++ b/index.html
@@ -53,10 +53,12 @@
     <div id="background"></div>
     <div id="frame">
         <h1>Verse of the Day</h1>
-        <h2>Luke 2:13-14</h2>
-        <p>13 Suddenly a great company of the heavenly host appeared with the angel, praising God and saying,</p>
-        <p>14 “Glory to God in the highest heaven,
-            and on earth peace to those on whom his favor rests.”</p>
+        <h2>Mark 14:27-31</h2>
+        <p>27 “You will all fall away,” Jesus told them, “for it is written: “‘I will strike the shepherd, and the sheep will be scattered.’</p>
+        <p>28 But after I have risen, I will go ahead of you into Galilee.”</p>
+        <p>29 Peter declared, “Even if all fall away, I will not.”</p>
+        <p>30 “Truly I tell you,” Jesus answered, “today—yes, tonight—before the rooster crows twice[e] you yourself will disown me three times.”</p>
+        <p>31 But Peter insisted emphatically, “Even if I have to die with you, I will never disown you.” And all the others said the same.</p>
     </div>
 
     <script>
